--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorBlue">#004C97</color>
+    <color name="colorLtBlue">#009CDE</color>
+    <color name="colorGreen">#007A33</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorGray">#C5C5C5</color>
 </resources>
