--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorBlue">#004C97</color>
     <color name="colorLtBlue">#009CDE</color>
+    <color name="colorLtBlueAlt">#019BEE</color>
     <color name="colorGreen">#007A33</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorGray">#C5C5C5</color>
