Adding decent UI and http requests.

--- a/app/src/main/res/layout/list_item_lot.xml
+++ b/app/src/main/res/layout/list_item_lot.xml
@@ -5,21 +5,24 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorLtBlue"
+    android:background="@drawable/borders"
+
     android:clipChildren="false"
-    android:padding="6dp"
     android:clipToPadding="false"
     android:orientation="vertical"
-
+    android:padding="6dp"
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
         android:id="@+id/lot_name"
-        android:layout_width="96dp"
-        android:layout_height="52dp"
+        android:layout_width="97dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Lot Name"
         android:textColor="@android:color/black"
-        android:textSize="15dp"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_conversion_absoluteHeight="19dp"
@@ -34,16 +37,22 @@
         android:layout_height="36dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_menu_is_favorite" />
+        app:srcCompat="@drawable/ic_menu_favorites" />
 
     <TextView
         android:id="@+id/lot_capacity"
         android:layout_width="114dp"
         android:layout_height="52dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Lot Capacity"
-        android:textSize="15dp"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/lot_name"
         app:layout_constraintTop_toTopOf="parent" />
 
