--- a/app/src/main/res/layout/fragment_lot.xml
+++ b/app/src/main/res/layout/fragment_lot.xml
@@ -6,7 +6,8 @@
 
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -18,10 +19,11 @@
 
             android:id="@+id/lot_name_fragment"
             style="?android:listSeparatorTextViewStyle"
-            android:layout_width="265dp"
+            android:layout_width="225dp"
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:background="@drawable/textview"
             android:text="@string/lot_name"
             android:textSize="15dp"
             app:layout_constraintStart_toStartOf="@+id/guideline4"
@@ -31,10 +33,11 @@
 
             android:id="@+id/lot_capacity_fragment"
             style="?android:listSeparatorTextViewStyle"
-            android:layout_width="265dp"
+            android:layout_width="225dp"
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
+            android:background="@drawable/textview"
             android:text="@string/lot_capacity"
             android:textSize="15dp"
             app:layout_constraintStart_toStartOf="@+id/guideline4"
@@ -42,25 +45,15 @@
 
         <Switch
             android:id="@+id/lot_favorite"
-            android:layout_width="57dp"
-            android:layout_height="47dp"
-            android:layout_marginStart="8dp"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
             android:layout_marginTop="8dp"
-            android:baselineAligned="false"
-            app:layout_constraintStart_toEndOf="@+id/lot_capacity_fragment"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/textview"
+            android:baselineAligned="true"
+            app:layout_constraintEnd_toStartOf="@+id/guideline5"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="60dp"
-            android:layout_height="20dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="Favorite"
-            android:textSize="15dp"
-            app:layout_constraintStart_toEndOf="@+id/lot_name_fragment"
-            app:layout_constraintTop_toTopOf="@+id/guideline6" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline4"
@@ -85,15 +78,26 @@
 
         <ImageView
             android:id="@+id/lot_imageView"
-            android:layout_width="353dp"
-            android:layout_height="449dp"
+            android:layout_width="350dp"
+            android:layout_height="400dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
+            android:background="@drawable/image_border"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintStart_toStartOf="@+id/guideline4"
             app:layout_constraintTop_toBottomOf="@+id/lot_capacity_fragment"
             app:srcCompat="@mipmap/ic_launcher" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="58dp"
+            android:layout_height="43dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline5"
+            app:layout_constraintTop_toTopOf="@+id/guideline6"
+            app:srcCompat="@android:drawable/btn_star_big_on" />
 
     </android.support.constraint.ConstraintLayout>
 
