--- a/app/src/main/res/layout/fragment_lot_list.xml
+++ b/app/src/main/res/layout/fragment_lot_list.xml
@@ -2,5 +2,6 @@
 <android.support.v7.widget.RecyclerView
     android:id="@+id/lot_recycler_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#000000"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
